# BS-Rewind

./: .gitignore  AutoFollowGui.py  AutoFollowGui.spec  LICENSE  README.md  local_models.py  pyproject.toml  requirements.txt
.github/workflows/: pyinstaller-windows.yml
.github/workflows/build.yml/: build.yml
