[project]
name = "bs-rewind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.55",
    "httpx>=0.27.2",
    "orjson>=3.10.11",
    "pyside6-addons>=6.8.0.2",
    "pyside6-essentials>=6.8.0.2",
    "pyside6>=6.8.0.2",
    "qasync>=0.27.1",
    "setuptools>=75.4.0",
    "undetected-chromedriver>=3.5.5",
    "urllib3>=2.2.3",
]
