[project]
name = "bs-rewind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.6"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "atproto==0.0.55",
    "attrs==24.2.0",
    "auto-download-undetected-chromedriver==0.16",
    "certifi==2024.8.30",
    "cffi==1.17.1 ; (os_name != 'nt' and platform_python_implementation != 'PyPy') or (implementation_name != 'pypy' and os_name == 'nt') or (implementation_name == 'pypy' and platform_python_implementation != 'PyPy')",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6 ; platform_system == 'Windows'",
    "cryptography==43.0.3",
    "cx-logging==3.2.1 ; sys_platform == 'win32'",
    "dmgbuild==1.6.2 ; sys_platform == 'darwin'",
    "dnspython==2.7.0",
    "downloadunzip==0.10",
    "ds-store==1.3.1 ; sys_platform == 'darwin'",
    "fastcopyfast==0.52",
    "filelock==3.16.1 ; sys_platform == 'linux'",
    "flatten-any-dict-iterable-or-whatsoever==0.33",
    "flatten-everything==0.41",
    "getfilenuitkapython==0.11",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "libipld==3.0.0",
    "lief==0.15.1 ; sys_platform == 'win32'",
    "list-all-files-recursively==0.12",
    "list-files-with-timestats==0.11",
    "mac-alias==2.2.2 ; sys_platform == 'darwin'",
    "orjson==3.10.11",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "patchelf==0.17.2.1 ; (platform_machine == 'aarch64' and sys_platform == 'linux') or (platform_machine == 'armv7l' and sys_platform == 'linux') or (platform_machine == 'i686' and sys_platform == 'linux') or (platform_machine == 'ppc64le' and sys_platform == 'linux') or (platform_machine == 's390x' and sys_platform == 'linux') or (platform_machine == 'x86_64' and sys_platform == 'linux')",
    "pycparser==2.22 ; (os_name != 'nt' and platform_python_implementation != 'PyPy') or (implementation_name != 'pypy' and os_name == 'nt') or (implementation_name == 'pypy' and platform_python_implementation != 'PyPy')",
    "pydantic-core==2.23.4",
    "pydantic==2.9.2",
    "pyinstaller>=6.11.1",
    "pyside6-addons==6.8.0.2",
    "pyside6-essentials==6.8.0.2",
    "pyside6==6.8.0.2",
    "pysocks==1.7.1",
    "qasync==0.27.1",
    "rapidfuzz==3.10.1",
    "requests==2.32.3",
    "selenium==4.26.1",
    "setuptools==75.4.0",
    "shiboken6==6.8.0.2",
    "shlexwhichplus==0.10",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "touchtouch==0.11",
    "trio-websocket==0.11.1",
    "trio==0.27.0",
    "typing-extensions==4.12.2",
    "undetected-chromedriver==3.5.5",
    "urllib3==2.2.3",
    "websocket-client==1.8.0",
    "websockets==13.1",
    "wsproto==1.2.0",
]

[tool.cxfreeze]
executables = [
    {script = "AutoFollowGui.py", target_name = "AutoFollowGui.exe"},
]

[tool.cxfreeze.build_exe]
build_exe = "build-pyproject"
